2005-04-05  Ahmad Riza H Nst  <ari@160c.afraid.org>

	* configure.in: Added id (Indonesian) to ALL_LINGUAS line.

2005-02-15  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (func_match): Handling the
	query which contails e-mail ID attribute, without any value.
	This lists the personal contacts when user selects the personal
	addressbook from user selection dialog. Partially fixes #66071
 
2005-02-09  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (add_vevent) : Always
	set the TRANSP property from the busy status. Fixes #70283
	(receive_objects) : Fixed a memory leak.

2005-02-08  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
	Storing tag information in summary file. Fixes #71555

2005-02-08  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/main.c (main) : Bind to GETTEXT_PACKAGE instead of PACKAGE.
	Probable fix for #71469

2005-02-07  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-gal.c (func_contains): Handling the
	query with the attribute fileAs. Fixes Gal lookup from user selection
	dialog, which was was not working as the query now is having
	fileAs=username.

2005-01-31  Sarfraaz Ahmed <asarfraaz@novell.com>

	* mail/mail-stub-exchange.c (get_folder): Dont mark Trash folder
	for filtering junk mails. Fixes #66963

2005-01-29  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* storage/exchange-hierarchy-webdav.c (hierarchy_new_folder):
	Check for duplicate entried being added into the hashtable.
	Fixes #68330
	
2005-01-27  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c : Fixed memory leaks
	* calendar/e-cal-backend-exchange-calendar.c : Similar
	Fixes #70357

2005-01-27  Sushma Rai  <rsushma@novell.com>

	* exchange-config-listener.[ch] (add_esource)(remove_esource): 
	Changed the arguments for the function. Now reading folder type,
	instead of is_contact_folder flag. 