@@ -1,3 +1,9 @@
+2005-12-14  Chenthill Palanisamy <pachenthill@novell.com>
+	
+	* calendar/e-cal-backend-exchange-calendar.c (modify_object_with_href):
+	Set the timezone to UTC if the timezone is not found in the
+	server.
+
 2005-04-05  Ahmad Riza H Nst  <ari@160c.afraid.org>
 
 	* configure.in: Added id (Indonesian) to ALL_LINGUAS line.
